copy io/vproxy/{base/vfd/vpacket/commons}